# Configs

./: .gitignore  README.md  pyproject.toml  setup.py
config/i3/: config  config.vm  i3-setup.sh
config/kitty/: kitty.conf
config/kitty/themes/: catppuccin-latte.conf  mocha.conf
config/nvim/: nvim
config/picom/: picom.conf
configs_cli/: main.py
configs_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dotfiles/: tmux.conf  zshrc
