[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configs_cli"
version = "0.1.0"
description = "A CLI tool to install dependencies and set up your dotfiles"
requires-python = ">=3.6"
authors = [
    {name = "Finley", email = "finley@example.com"}
]
dependencies = [
    "argparse",
    "setuptools>=64",
    "wheel",
    "rich>=10.0.0",  # For better console output
    "markdown-it-py>=2.2.0",
    "pygments<3.0.0,>=2.13.0",
    "mdurl~=0.1"
]

